--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <main>
         <section class="hero">
             <h1>Bienvenue dans l'univers de Minecraft</h1>
-            <p>Explorez, construisez, survivez et créez votre propre aventure dans ce jeu légendaire.</p>
+            <p>Bienvenue dans le monde merveilleux de Minecraft, où votre imagination est la seule limite et chaque bloc est une aventure en attente de se révéler !</r>
+                Préparez-vous à explorer des paysages infinis, construire des structures étonnantes et survivre à des nuits pleines de créatures mystérieuses.</r>
+                Que vous soyez un bâtisseur ingénieux, un explorateur audacieux ou un stratège redoutable, il y a une place pour vous dans cet univers où </r>
+                tout est possible. Plongez et commencez votre voyage épique dès maintenant !
+            </p>
             <a href="#about" class="btn">En savoir plus</a>
         </section>
         <section id="about">
