--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <section class="hero">
             <h1>Bienvenue dans l'univers de Minecraft</h1>
             <p>Bienvenue dans le monde merveilleux de Minecraft, où votre imagination est la seule limite et chaque bloc est une aventure en attente de se révéler !</r>
-                Préparez-vous à explorer des paysages infinis, construire des structures étonnantes et survivre à des nuits pleines de créatures mystérieuses.</r>
-                Que vous soyez un bâtisseur ingénieux, un explorateur audacieux ou un stratège redoutable, il y a une place pour vous dans cet univers où </r>
-                tout est possible. Plongez et commencez votre voyage épique dès maintenant !
+                Préparez-vous à explorer des paysages infinis, construire des structures étonnantes et survivre à des nuits pleines de créatures mystérieuses.
             </p>
             <a href="#about" class="btn">En savoir plus</a>
         </section>
