--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </section>
         <section id="about">
             <h2>À propos de Minecraft</h2>
-            <p>Minecraft est un jeu de type bac à sable où vous pouvez laisser libre cours à votre imagination. Depuis sa sortie en 2011, il est devenu l'un des jeux les plus populaires au monde.</p>
+            <p>Minecraft est un jeu de construction et d'aventure en monde ouvert, développé par Mojang Studios. Dans ce jeu, les joueurs peuvent explorer des mondes générés aléatoirement</r>
+                composés de blocs, qui peuvent être détruits et reconstruits pour créer des structures et des paysages variés. Le jeu propose différents modes, dont le mode Survie où les</r>
+                joueurs doivent collecter des ressources, construire des abris et se défendre contre des créatures hostiles, et le mode Créatif où ils ont un accès illimité aux ressources</r>
+                pour laisser libre cours à leur imagination.
+            </p>
         </section>
         <section id="features">
             <section id="dimensions">
