--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </section>            
             <h2>Caractéristiques du jeu</h2>
             <ul>
-                <li>Mode survie et créatif</li>
-                <li>Des biomes variés et infinis</li>
-                <li>Mode multijoueur pour jouer avec vos amis</li>
-                <li>Mods et packs de textures personnalisés</li>
+                <li>Il existe différent mode de jeu, le mode survie et créatif</li>
+                <li>Nous pouvons retrouver des biomes variés et infinis</li>
+                <li>Il est possible de jouer avec vos en mode multijoueur</li>
+                <li>Vous pouvez même ajuster le jeu en fonction de vos goûts et couleurs avec les packs de textures personnalisés</li>
             </ul>
         </section>
         <section id="community">
