--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <h2>Caractéristiques du jeu</h2>
             <ul>
                 <li>Il existe différent mode de jeu, le mode survie et créatif</li>
-                <li>Nous pouvons retrouver des biomes variés et infinis</li>
-                <li>Il est possible de jouer avec vos en mode multijoueur</li>
+                <li>Vous pouvez retrouver des biomes variés et infinis magnifique</li>
+                <li>Il est possible de jouer avec vos amis en mode multijoueur</li>
                 <li>Vous pouvez même ajuster le jeu en fonction de vos goûts et couleurs avec les packs de textures personnalisés</li>
             </ul>
         </section>
