1ere page commit

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
                         <h3>Nether</h3>
                     </div>
                     <div class="dimension">
-                        <img src="CSS/Images/bloc-de-terre.png" alt="Overworld">
-                        <h3>Overworld</h3>
-                    </div>
+                        <a href="overworld.html">
+                            <img src="CSS/Images/bloc-de-terre.png" alt="Overworld">
+                            <h3>Overworld</h3>
+                        </a>
+                    </div>                    
                     <div class="dimension">
                         <img src="CSS/Images/bloc-de-l'end.png" alt="End">
                         <h3>End</h3>
