--- a/overworld.html
+++ b/overworld.html
@@ -31,6 +31,10 @@
                 <li>**Villages** : Trouvez des villages peuplés de PNJ avec lesquels vous pouvez échanger.</li>
                 <li>**Structures** : Découvrez des temples, des manoirs et d'autres structures générées.</li>
             </ul>
+            <h2>Galerie de l'Overworld</h2> 
+            <div class="gallery"> 
+                <img src="CSS/Images/overworld1.png" alt="Image Overworld 1"> 
+                <img src="CSS/Images/overworld2.jpg" alt="Image Overworld 2">
             <a href="index.html" class="btn">Retour à l'accueil</a>
         </section>
     </main>
