--- a/nether.html
+++ b/nether.html
@@ -24,7 +24,7 @@
         <section>
             <h1>Le Nether</h1>
             <p>Le Nether est la seconde dimension de minecraft, cette dernière est considéré par beaucoup comme étant la dimension représantant les enfers. On peut y retrouver des grandes étendues de lave, des blocs rouge pour y indiquer la chaleur qu'il y fait et de nombreuses forteresses.</p>
-            <h2>Caractéristiques de l'Overworld</h2>
+            <h2>Caractéristiques du Nether</h2>
             <ul>
                 <li>Biomes variés : Découvrez une multitude de biomes angoissant. Mais prenez garde à ne pas vous y perdre.</li>
                 <li>Minerais dans les profondeurs : Il est possible de retrouver différent minerais tel que la netherrite, le meilleur minerais du jeu qui vous permettra de confectionner des armures et des armes très forte.</li>
@@ -32,8 +32,8 @@
             </ul>
             <h2>Galerie du Nether</h2> 
             <div class="gallery"> 
-                <img src="CSS/Images/nether1.jpg" alt="Image Overworld 1"> 
-                <img src="CSS/Images/nether2.jpg" alt="Image Overworld 2">
+                <img src="CSS/Images/nether1.jpg" alt="Image Nether 1"> 
+                <img src="CSS/Images/nether2.jpg" alt="Image Nether 2">
         </section>
     </main>
     <footer>
