--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#about">À propos</a></li>
+                <li><a href="#about">Minecraft, c'est quoi ?</a></li>
                 <li><a href="#features">Caractéristiques</a></li>
                 <li><a href="#community">Communauté</a></li>
             </ul>
@@ -28,7 +28,7 @@
             <a href="#about" class="btn">En savoir plus</a>
         </section>
         <section id="about">
-            <h2>À propos de Minecraft</h2>
+            <h2>Minecraft, c'est quoi ?</h2>
             <p>Minecraft est un jeu de construction et d'aventure en monde ouvert, développé par Mojang Studios. Dans ce jeu, les joueurs peuvent explorer des mondes générés aléatoirement</r>
                 composés de blocs, qui peuvent être détruits et reconstruits pour créer des structures et des paysages variés. Le jeu propose différents modes, dont le mode Survie où les</r>
                 joueurs doivent collecter des ressources, construire des abris et se défendre contre des créatures hostiles, et le mode Créatif où ils ont un accès illimité aux ressources</r>
