--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
                 <h2>Explorez les Dimensions</h2>
                 <div class="dimension-container">
                     <div class="dimension">
-                        <img src="CSS/Images/bloc-de-netherrack.png" alt="Nether">
-                        <h3>Nether</h3>
+                        <a href="nether.html">
+                            <img src="CSS/Images/bloc-de-netherrack.png" alt="Nether">
+                            <h3>Nether</h3>
+                        </a>
+
                     </div>
                     <div class="dimension">
                         <a href="overworld.html">
