--- a/overworld.html
+++ b/overworld.html
@@ -26,10 +26,10 @@
             <p>L'Overworld est la dimension principale dans Minecraft, où la plupart des joueurs passent leur temps. Il est composé de divers biomes, tels que des forêts, des déserts, des océans et bien plus encore. C'est une vaste étendue de terrain à explorer, où vous pouvez construire, miner, et survivre.</p>
             <h2>Caractéristiques de l'Overworld</h2>
             <ul>
-                <li>**Biomes variés** : Découvrez une multitude de biomes uniques avec leur propre flore et faune.</li>
-                <li>**Mines et cavernes** : Explorez les profondeurs de la terre à la recherche de minerais précieux.</li>
-                <li>**Villages** : Trouvez des villages peuplés de PNJ avec lesquels vous pouvez échanger.</li>
-                <li>**Structures** : Découvrez des temples, des manoirs et d'autres structures générées.</li>
+                <li>Biomes variés : Découvrez une multitude de biomes uniques avec leur propre flore et faune.</li>
+                <li>Mines et cavernes : Explorez les profondeurs de la terre à la recherche de minerais précieux.</li>
+                <li>Villages : Trouvez des villages peuplés de PNJ avec lesquels vous pouvez échanger.</li>
+                <li>Structures : Découvrez des temples, des manoirs et d'autres structures générées.</li>
             </ul>
             <h2>Galerie de l'Overworld</h2> 
             <div class="gallery"> 
