--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                         </a>
                     </div>                    
                     <div class="dimension">
-                        <img src="CSS/Images/bloc-de-l'end.png" alt="End">
-                        <h3>End</h3>
+                        <a href="end.html">
+                            <img src="CSS/Images/bloc-de-l'end.png" alt="End">
+                            <h3>End</h3>
+                        </a>
                     </div>
                 </div>
             </section>            
