--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#about">Minecraft, c'est quoi ?</a></li>
+                <li><a href="#about">Minecraft</a></li>
                 <li><a href="#features">Caractéristiques</a></li>
                 <li><a href="#community">Communauté</a></li>
             </ul>
