--- a/end.html
+++ b/end.html
@@ -34,7 +34,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Minecraft Fan Site. Non officiel.</p>
+        <p>&copy; Site Minecraft Non officiel.</p>
     </footer>
 </body>
 </html>
