--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <main>
         <section class="hero">
             <h1>Bienvenue dans l'univers de Minecraft</h1>
-            <p>Bienvenue dans le monde merveilleux de Minecraft, où votre imagination est la seule limite et chaque bloc est une aventure en attente de se révéler !</r>
+            <p>Bienvenue dans le monde merveilleux de Minecraft, où votre imagination est la seule limite et chaque bloc est une aventure en attente de se révéler !
                 Préparez-vous à explorer des paysages infinis, construire des structures étonnantes et survivre à des nuits pleines de créatures mystérieuses.
             </p>
             <a href="#about" class="btn">En savoir plus</a>
         </section>
         <section id="about">
             <h2>Minecraft, c'est quoi ?</h2>
-            <p>Minecraft est un jeu de construction et d'aventure en monde ouvert, développé par Mojang Studios. Dans ce jeu, les joueurs peuvent explorer des mondes générés aléatoirement</r>
-                composés de blocs, qui peuvent être détruits et reconstruits pour créer des structures et des paysages variés. Le jeu propose différents modes, dont le mode Survie où les</r>
-                joueurs doivent collecter des ressources, construire des abris et se défendre contre des créatures hostiles, et le mode Créatif où ils ont un accès illimité aux ressources</r>
+            <p>Minecraft est un jeu de construction et d'aventure en monde ouvert, développé par Mojang Studios. Dans ce jeu, les joueurs peuvent explorer des mondes générés aléatoirement
+                composés de blocs, qui peuvent être détruits et reconstruits pour créer des structures et des paysages variés. Le jeu propose différents modes, dont le mode Survie où les
+                joueurs doivent collecter des ressources, construire des abris et se défendre contre des créatures hostiles, et le mode Créatif où ils ont un accès illimité aux ressources
                 pour laisser libre cours à leur imagination.
             </p>
         </section>
